--- a/index.html
+++ b/index.html
@@ -86,12 +86,15 @@
             </li>
         </ul>
         <br><br>
+        
     </section>
+   <footer>
     <nav>
         <ul>
           <li class="menu-title"><a href="index.html">Национальная кухня - лучшие рецепты</a></li>
         </ul>
             
       </nav>
+   </footer>
 </body>
 </html>
